Bug 64722 - FILESAVE: Name is not saved in the document when is of form "Text"
Summary: FILESAVE: Name is not saved in the document when is of form "Text"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: All Linux (All)
: high major
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.3.0
Keywords: bibisected, regression
: 66523 67721 68054 68388 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-05-17 18:17 UTC by menturi
Modified: 2016-04-24 18:38 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Attached is a document which includes a chart. When saving, I included a Name in the data series, however when opening it, it shows as "Column B" (excluding quotes), and the Name of the data series is blank. (17.95 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-05-17 18:17 UTC, menturi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description menturi 2013-05-17 18:17:13 UTC
Created attachment 79479 [details]
Attached is a document which includes a chart. When saving, I included a Name in the data series, however when opening it, it shows as "Column B" (excluding quotes), and the Name of the data series is blank.

Problem description: 
Having a chart's data series' Name of form "Range Name" (including quotes) is not retained after saving and reopening a document.

Steps to reproduce:
1. Open LibreOffice Calc and create a chart with at least one data series
2. Set the Name of the data series to e.g. "Range Name" (including quotes). Be sure the legend is visible. Make note that the legend correctly labels the data series Range Name.
3. Save and close the document
4. Reopen the document. Make note that the legend no longer says Range Name.

Current behavior:
The data series Name appears to not be saved with the document in this situation.

Expected behavior:
The data series Name is expected to be retained after reopening the document.

Operating System: Ubuntu
Version: unspecified
Comment 1 Cor Nouws 2013-05-17 18:37:46 UTC
Hi menturi,

thanks for the report and the clear description.

(In reply to comment #0)
> [...]
> 2. Set the Name of the data series to e.g. "Range Name" (including quotes).
> the data series Range Name.
> 3. Save and close the document
> 4. Reopen the document. Make note that the legend no longer says Range Name.
> [...]

I can reproduce that behaviour.
However, the Help explains, and only explains, that you van set names by selecting a range.
So is what you did not possible, or undocumented (worked previously?) and broken?

Any idea ;)

thanks,
Comment 2 menturi 2013-05-18 13:43:37 UTC
(In reply to comment #1)
> I can reproduce that behaviour.
> However, the Help explains, and only explains, that you van set names by
> selecting a range.
> So is what you did not possible, or undocumented (worked previously?) and
> broken?

Maybe it is an undocumented feature. I see two options:
1. Remove the potentially unintended feature. If it was an intended feature, this may not be the most pleasent idea.
2. Correct the bug, and document the feature.

Honestly, I've made use of this feature in many instances, and would like to see it persist in the future, but if there are technical issues with saving the data or file format limitations, then it is understandable why it may be removed.
Comment 3 Cor Nouws 2013-05-18 16:10:11 UTC
(In reply to comment #2)

> Honestly, I've made use of this feature in many instances, and would like to
> see it persist in the future,

Obviously ;)
Do you know in which version it worked for the last time?
Comment 4 menturi 2013-05-19 19:50:52 UTC
(In reply to comment #3)
> Do you know in which version it worked for the last time?
I don't recall a time that I've ever seen the Name retained is such a use.
Comment 5 Cor Nouws 2013-05-19 23:56:51 UTC
(In reply to comment #4)
> I don't recall a time that I've ever seen the Name retained is such a use.

OK ... in comment #2 you write " .... I've made use of this feature in many instances,..." 
So I don't understand that :)

Would it be OK to make an enhancement request from this, e.g. make it possible to add the name of a *single* data range as text in the field directly?
Comment 6 menturi 2013-07-17 15:59:06 UTC
(In reply to comment #5)
> (In reply to comment #4)
> > I don't recall a time that I've ever seen the Name retained is such a use.
> 
> OK ... in comment #2 you write " .... I've made use of this feature in many
> instances,..." 
> So I don't understand that :)
> 
> Would it be OK to make an enhancement request from this, e.g. make it
> possible to add the name of a *single* data range as text in the field
> directly?

Yes, this could be considered an enhancement request. I'm not sure how to set this report to be an enhancement request (if possible).
Comment 7 Joel Madero 2013-09-24 02:29:06 UTC
This isn't an enhancement it's definitely a bug. I can confirm it's a regression, I can also confirm that the value is being stored just not read - if you open the document in 3.6.0 the label is correct. I'm bibisecting now
Comment 8 Joel Madero 2013-09-24 02:31:50 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version 4.1.1.2 
Platform: Bodhi Linux 2.2 x64
+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
As I've been able to confirm this problem on an earlier release I am changing the version number as version is the earliest version that we can confirm the bug, we use comments to say that the bug exists in newer versions as well.

Marking as:

New (confirmed)
Major - not loss of data but for all purposes for end user it looks like loss of data
Highest - regression + common task

Keywords - regression

Whiteboard Status - bibisectrequest

Markus - maybe one for you, I'll try to get you the bibisect shortly but it might be after bibisect40 and I need to redownload the daily (which takes me a couple days)

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 9 Joel Madero 2013-09-24 02:34:45 UTC
 9a5620ca6473969359f262802c76daf35cbcbb5d is the first bad commit
commit 9a5620ca6473969359f262802c76daf35cbcbb5d
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue Dec 11 01:59:31 2012 +0000

    source-hash-ae4e4a11d4300f7448cb6bd170fcb034542caddc
    
    commit ae4e4a11d4300f7448cb6bd170fcb034542caddc
    Author:     Rene Engelhard <rene@debian.org>
    AuthorDate: Tue Nov 6 21:24:32 2012 +0100
    Commit:     Rene Engelhard <rene@debian.org>
    CommitDate: Tue Nov 6 21:24:32 2012 +0100
    
        typo...
    
        Change-Id: I2c7968194afbcf74967cd16c639dce7de858a513

:100644 100644 c09b92a8ddf24b8738a7cd3a695ae1e4482d354c 6b13afd13f023cedac65a896318de4aa55dead27 M	autogen.log
:100644 100644 bcee1e11bd693642ca5a6330175b58082e5dcdd0 54d2377f5b3afd6ed668b3e24cb877c289119ec5 M	ccache.log
:100644 100644 75677cef16786d2cc95c0d8f301482278ca055c3 d18a6ebcd3b8537c3dd3dbc16e862fb6370ecb8a M	commitmsg
:100644 100644 83b4ecc0ecb3e031c804d49f45f854e95d5cc961 d482c00e5fff6081c6b87b637fd9ffaf3e1e2c6c M	dev-install.log
:100644 100644 91437b9974ffada7e049273419bb8c66c91c0539 abf45ab9609c77a5ab952aa310eafe8c2ffaf85c M	make.log
:040000 040000 45c0bab8b669778ab523c8f65a25e8c9afde604a f4bfa15b2f72d3df5675b07bcf32254a819b9d19 M	opt



# bad: [5b4b36d87517a6ea96ff8c84c46b12f462fc9a1a] source-hash-8450a99c744e9005f19173e4df35d65640bcf5c4
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9] source-hash-099198a4224778fe6e43f5dc13b5b9b1b4dc828c
git bisect good 16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9
# good: [f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a] source-hash-a581d31b227623e09d2970a91214fda398f98eda
git bisect good f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a
# good: [114fd3b76bcba890e6d702d00cef910f1493c262] source-hash-64ab96cd15e52da88781e720d6f031dbcd0ba902
git bisect good 114fd3b76bcba890e6d702d00cef910f1493c262
# bad: [47498a36f7af8f54e6e3dda89cd4708802a409e6] source-hash-19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
git bisect bad 47498a36f7af8f54e6e3dda89cd4708802a409e6
# good: [f4e2d84db194943180f3e7ed4adce5f8e377d9bc] source-hash-806d18ae7b8c241fe90e49d3d370306769c50a10
git bisect good f4e2d84db194943180f3e7ed4adce5f8e377d9bc
# bad: [fb4214f9d134b556582a4a5280e5458de5f8eebd] source-hash-683758efb22d08a4cf211a6d985148f513da2a90
git bisect bad fb4214f9d134b556582a4a5280e5458de5f8eebd
# good: [e2e46267c18c2706de771a08472ebfce19f68520] source-hash-4316e643ef345b0f673b4a03a80a4b7cb3185588
git bisect good e2e46267c18c2706de771a08472ebfce19f68520
# bad: [9a5620ca6473969359f262802c76daf35cbcbb5d] source-hash-ae4e4a11d4300f7448cb6bd170fcb034542caddc
git bisect bad 9a5620ca6473969359f262802c76daf35cbcbb5d
Comment 10 Joel Madero 2013-09-24 13:13:14 UTC
*** Bug 66523 has been marked as a duplicate of this bug. ***
Comment 11 Joel Madero 2013-09-24 22:19:11 UTC
*** Bug 68054 has been marked as a duplicate of this bug. ***
Comment 12 Robinson Tryon (qubit) 2013-10-19 00:09:04 UTC
Remove comma from whiteboard.
Comment 13 Björn Michaelsen 2014-01-17 00:43:26 UTC
(This is an automated message.)

LibreOffice development currently prioritizes bugs with the so called MAB (most annoying bugs) -- as this bug has not run through that process (including writing a short rationale for this bug being a candidate and other who are watching the tracker bug silently approving that rationale etc.) its priority is set to high. Note this is effectively no change in the urgency assigned to this bug, as we are currently not making a difference between high and highest and severity is untouched.

You can find out more about MABs and how the process works by contacting libreoffice qa on irc:

 http://webchat.freenode.net/?channels=libreoffice-qa

The QA wiki page also gives you hints on how to get in contact with the team (if IRC fails you, your next best choice is the mailing list):

 https://wiki.documentfoundation.org/QA
Comment 14 Markus Mohrhard 2014-03-27 22:48:53 UTC
*** Bug 67721 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2014-04-05 16:38:16 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=89bbc9286778df711f786f50c27f65315b29c39a

export label names that are strings, fdo#64722, cp#1000058



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2014-04-05 16:38:30 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c47bbfce2deea8bda80f06c961be531aee4b23ce

add test for fdo#64722, cp#1000058



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Markus Mohrhard 2014-04-05 16:57:48 UTC
(In reply to comment #7)
> This isn't an enhancement it's definitely a bug. I can confirm it's a
> regression, I can also confirm that the value is being stored just not read
> - if you open the document in 3.6.0 the label is correct. I'm bibisecting now

Can you please provide a document based on 3.6.0 that shows that it works? There is no xml element that could take the label string in ODF 1.2 so I fear there was a ugly hack in ealier versions that someone rightfully removed.
Comment 18 bruno.binet 2014-08-27 20:30:15 UTC
The fix in LO4.3 works but the series name field in the datarange dialog box is not captured instantly as it should. I have filled another bug for this:

Bug 83162 - DATALOSS: series name not retained if another field is filled before pressing "ok"
Comment 19 ign_christian 2014-09-30 03:24:15 UTC
*** Bug 68388 has been marked as a duplicate of this bug. ***
Comment 20 Robinson Tryon (qubit) 2015-12-17 07:14:38 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]
Comment 21 Jean-Baptiste Faure 2016-04-24 18:38:27 UTC
Version set from comment #8.

Best regards. JBF