export label names that are strings, fdo#64722, cp#1000058

Change-Id: Id72e9778c70db02b942326c6f8b5f448acb28b41